upadate linkins to file paths

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img
             src="./images/cat-playing.jpg"
             alt="A drawing of a cat surrounded with its toys." />
-          <img src="/images/cotton-flower.jpg" alt="A cotton flower." />
+          <img src="./images/cotton-flower.jpg" alt="A cotton flower." />
           <img
             src="./images/female-figure-2.jpg"
             alt="Siluette of a woman wearing pink dress." />
